FIX - no scrollbar - have entries to views

--- a/public/assets/cms/css/main_style.css
+++ b/public/assets/cms/css/main_style.css
@@ -38,6 +38,12 @@
       margin-top: 10px;
     }
 
+    .box{
+        /* max-height: 530px; */
+        overflow-y: auto;
+        margin-top: 20px;
+    }
+
     div#list-data {
         padding: 0;
     }
